# conductor-oss

./: .env.example  .gitignore  .greptile  .vercelignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONDUCTOR-TAGS.md  CONDUCTOR.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  MIGRATE.md  MIGRATION-PLAN.md  README.md  SECURITY.md  TTYD_IMPLEMENTATION_SUMMARY.md  conductor-oss-threat-model.md  conductor.example.yaml  docker-compose.yml  install.sh  netlify.toml  package.json  pnpm-lock.yaml  refactor.py  rewrite.py  security_best_practices_report.md  security_review_2026-03-22.md
.changeset/: clean-suns-fry.md  config.json  few-yaks-teach.md
.claude/: launch.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: changesets.yml  ci.yml  codeql.yml  dependency-review.yml  deploy-relay.yml  deployment-smoke.yml  docs-check.yml  e2e.yml  enforce-main-merge-owner.yml  pr-metadata.yml  publish.yml  release.yml  scorecards.yml  security.yml  sync-website.yml
bridge-cmd/: go.mod  main.go  main_test.go
bridge-cmd.pre-v2-backup-20260320-bridge-v2/: go.mod  main.go
bridge-cmd.pre-v2-backup-20260320-bridge-v2/pair/: pair.go
bridge-cmd.pre-v2-backup-20260320-bridge-v2/token/: token.go
bridge-cmd/backend/: backend.go  backend_test.go
bridge-cmd/connect/: connect.go  connect_test.go
bridge-cmd/daemon/: daemon.go
bridge-cmd/dashboardurl/: store.go
bridge-cmd/device/: store.go
bridge-cmd/install/: install.go  install_test.go
bridge-cmd/pair/: pair.go
bridge-cmd/relay/: client.go  client_test.go
bridge-cmd/relayurl/: store.go
bridge-cmd/token/: token.go  token_test.go
crates/conductor-cli/: Cargo.toml
crates/conductor-cli/src/: bridge.rs  main.rs
crates/conductor-core/: Cargo.toml
crates/conductor-core/src/: board.rs  config.rs  dispatcher.rs  error.rs  event.rs  lib.rs  paths.rs  presets.rs  project.rs  scaffold.rs  session.rs  support.rs  task.rs  types.rs  workspace.rs
crates/conductor-db/: Cargo.toml
crates/conductor-db/src/: lib.rs  migrations.rs  repo.rs
crates/conductor-db/src/repo/: error_repo.rs  error_repo_tests.rs  project_repo.rs  project_repo_tests.rs  session_repo.rs  session_repo_tests.rs  task_repo.rs  task_repo_tests.rs  tests.rs
crates/conductor-executors/: Cargo.toml
crates/conductor-executors/src/: discovery.rs  executor.rs  executor_ext_tests.rs  lib.rs  process.rs  prompt.rs  pty_subprocess.rs  ttyd.rs
crates/conductor-executors/src/agents/: amp.rs  ccr.rs  claude_code.rs  codex.rs  copilot.rs  cursor.rs  droid.rs  gemini.rs  mod.rs  opencode.rs  qwen.rs
crates/conductor-executors/tests/: agent_matrix_test.rs
crates/conductor-git/: Cargo.toml
crates/conductor-git/src/: lib.rs  worktree.rs
crates/conductor-relay/: Cargo.toml  Dockerfile
crates/conductor-relay/src/: main.rs  relay.rs
crates/conductor-server/: Cargo.toml
crates/conductor-server/src/: acp.rs  acp_prompt.rs  dispatcher_task_lifecycle.rs  error_logger.rs  lib.rs  mcp.rs  runtime.rs  state.rs  task_context.rs  webhook.rs
crates/conductor-server/src/notifier/: desktop.rs  discord.rs  mod.rs
crates/conductor-server/src/routes/: agents.rs  api_error.rs  app_update.rs  attachments.rs  auth.rs  boards.rs  config.rs  context_files.rs  dispatcher.rs  errors.rs  events.rs  filesystem.rs  github.rs  health.rs  middleware.rs  mod.rs  notifications.rs  projects.rs  repositories.rs  session_workspace.rs  sessions.rs  skills.rs  tasks.rs  terminal.rs  ttyd_protocol.rs  ttyd_protocol_tests.rs  workspaces.rs
crates/conductor-server/src/routes/terminal/: auth.rs  bootstrap.rs  control.rs  mod.rs  snapshot.rs  stream.rs  ttyd.rs
crates/conductor-server/src/state/: acp_dispatcher.rs  app_update.rs  board_collaboration.rs  bridge_registry.rs  detached_runtime.rs  helpers.rs  mcp_config.rs  mod.rs  pty_write_queue.rs  runtime_status.rs  session_manager.rs  session_store.rs  spawn_queue.rs  terminal_escape_filter.rs  terminal_hosts.rs  terminal_supervisor.rs  tmux_runtime.rs  types.rs  workspace.rs
crates/conductor-server/src/state/detached/: control.rs  daemon.rs  emulator.rs  frame.rs  helpers.rs  lifecycle.rs  log_tail.rs  mod.rs  pty_host.rs  pty_subprocess.rs  stream.rs  tests.rs  ttyd_launcher.rs  types.rs
crates/conductor-server/src/tracker/: mod.rs
crates/conductor-server/tests/: api_test.rs  board_test.rs  common.rs  e2e_integration_tests.rs  session_test.rs  spawn_context_test.rs  spawn_test.rs  terminal_contract_test.rs  terminal_validation_test.rs
crates/conductor-terminal-host/: Cargo.toml
crates/conductor-terminal-host/src/: lib.rs
crates/conductor-ttyd/: Cargo.toml
crates/conductor-ttyd/src/: lib.rs  protocol.rs  pty.rs  session.rs  websocket.rs
crates/conductor-watcher/: Cargo.toml
crates/conductor-watcher/src/: lib.rs
dashboard/: index.html  package.json  tsconfig.json  vite.config.ts
docs/: OPERATIONAL-RUNBOOK.md  PRD-CONDUCTOR-BRIDGE-v2.md  PRD-CONDUCTOR-BRIDGE.md  PRD-SKILLS-MARKETPLACE.md  SUPERSET_INTEGRATION.md  TESTING.md  TTYD_TERMINAL_IMPLEMENTATION.md  manifest.json  openclaw-dispatcher-frontdoor.md  relay-deployment.md  terminal-frame-protocol.md  terminal-qa-checklist.md  terminal-qa-matrix.md  terminal-rollout.md  terminal-superset-gap-review.md
orchestrator/runtime-sidecar/: Cargo.toml  README.md
orchestrator/runtime-sidecar/src/: main.rs
research/: superset-terminal-architecture.md  superset-terminal-rewire-plan.md  ttyd-architecture-analysis.md
scripts/: capture-dashboard-screenshots.mjs  capture-shadower1-flow.mjs  cli-native-packages.mjs  cli-release-stage.mjs  generate-release-notes.mjs  pack-cli-native.mjs  pack-cli-package.mjs  pack-cli-release.mjs  publish-cli-package.mjs  release-notes-lib.mjs  release-notes-lib.test.mjs  run-prod-stack.sh  start-relay.sh  sync-package-versions.mjs  terminal-benchmark.sh  validate-docs.sh  validate-pr-description.mjs  verify-cli-package.mjs  verify-cli-publish-manifest.mjs  verify-npm-publication.mjs
(+17 files in other folders)
