[package]
name = "conductor-relay"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "conductor-relay"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
futures-util = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
tower-http = { workspace = true }
conductor-types = { path = "../conductor-types" }
