[package]
name = "conductor-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
conductor-core = { path = "../conductor-core" }
conductor-db = { path = "../conductor-db" }
conductor-executors = { path = "../conductor-executors" }
conductor-watcher = { path = "../conductor-watcher" }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
libc = "0.2"
