[package]
name = "conductor-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
conductor-core = { path = "../conductor-core" }
conductor-db = { path = "../conductor-db" }
conductor-executors = { path = "../conductor-executors" }
conductor-watcher = { path = "../conductor-watcher" }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
notify-rust = { path = "../notify-rust" }
jsonwebtoken = "10"
regex = "1"
libc = "0.2"
glob = { workspace = true }
async-trait = { workspace = true }
portable-pty = { workspace = true }
vt100 = "0.16"

[dev-dependencies]
tower = "0.5"
base64 = "0.22"
rand = "0.8"
rsa = { version = "0.9", features = ["pem"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }
