[package]
name = "conductor-ttyd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
portable-pty = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio-tungstenite = "0.26"
