[package]
name = "conductor-runtime-sidecar"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
